about me content and mobile

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Clement Francis | Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -132,12 +133,12 @@
               >
             </li>
             <li>
-              <span class="changing-text changing-text3">Production</span>
+              <span class="changing-text changing-text3">Design Engineer</span>
             </li>
           </ul>
         </div>
       </h5>
-      <button type="button" class="btn btn-self">Download Resume</button>
+      <button class="btn btn-self" onclick="var resume=document.createElement('a');resume.href='./images/clement francis-Lebenslauf-Du en-GB.pdf';resume.target='_blank';resume.click();">Download Resume</button>
 
       <div
         class="illustration-cover d-flex w-90 justify-content-between align-items-end"
@@ -561,22 +562,13 @@
           </clipPath>
         </defs>
       </svg>
-      <div class="cover d-flex justify-content-between align-items-end">
+      <div class="cover ">
         <div
-          class="about-content d-flex flex-column h-100 justify-content-center"
+          class="about-content"
         >
           <h2 class="heading">About me</h2>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et
-          odit, corporis recusandae quo ut reprehenderit dolorem quidem tempora,
-          ducimus placeat, sapiente perspiciatis cumque magni! Repellat adipisci
-          aliquid obcaecati qui?
-          <br />
-          <br />
-
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum et
-          odit, corporis recusandae quo ut reprehenderit dolorem quidem tempora,
-          ducimus placeat, sapiente perspiciatis cumque magni! Repellat adipisci
-          aliquid obcaecati qui?
+          I am a Simulation and Design Engineer currently doing my masters in "Simulation and System design" from Stralsund University of Applied Sciences.
+        
         </div>
         <div class="image-bg"></div>
         <img
