--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" type="text/css" href="./stylesheets/index.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/home.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/about.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/education.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/skills.css" />
+    <link rel="stylesheet" type="text/css" href="./stylesheets/projects.css" />
+    <link rel="stylesheet" media="(max-width: 768px)" href="./stylesheets/mobile.css">
+
   </head>
   <body>
     <nav id="navbar" class="navbar sticky-top navbar-expand-lg">
@@ -56,9 +63,7 @@
             </li>
           </div>
         </div>
-        <a class="navbar-brand" href="#"
-          ><img src="./images/logo.jpg" class="logo" alt="logo"
-        /></a>
+        
         <button
           class="navbar-toggler"
           type="button"
