--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Clement Francis | Portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,6 +19,32 @@
     <link rel="stylesheet" type="text/css" href="./stylesheets/projects.css" />
     <link rel="stylesheet" media="(max-width: 768px)" href="./stylesheets/mobile.css">
 
+    <link rel="icon" href="./images/logo.jpg" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta name="keywords" content="Clement Francis Portfolio" />
+		<meta name="author" content="Angel. F" />
+		<meta name="title" content="Clement Francis's Portfolio" />
+		<meta name="description" content="Clement Francis | Portfolio" />
+		<meta property="og:type" content="website" />
+		<meta property="og:title" content="Clement Francis's Portfolio" />
+		<meta
+			property="og:url"
+			content="https://developedbyangel.github.io/ClementFrancis/"
+		/>
+		<meta
+			property="og:image"
+			itemprop="image"
+			content="https://developedbyangel.github.io/ClementFrancis/images/profile2.png"
+		/>
+		<meta
+			property="og:image:secure_url"
+			content="https://developedbyangel.github.io/ClementFrancis/images/profile2.png"
+		/>
+		<meta property="og:image:type" content="image/jpg" />
+		<meta property="og:image:width" content="256" />
+		<meta property="og:image:height" content="256" />
+		<meta property="og:image:alt" content="Clement Francis" />
   </head>
   <body>
     <nav id="navbar" class="navbar sticky-top navbar-expand-lg">
